apps/home/music-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: music-assistant-app
          image: 'ghcr.io/music-assistant/server:2.10.4@sha256:37a9a2776e838a754c9f5b38c432567389952304e7cb8f6b44b6cd28043de6de'
          imagePullPolicy: IfNotPresent
          # securityContext:
          #   privileged: true
          ports:
            - name: http
              containerPort: 8095
              protocol: TCP
          resources: {}
          livenessProbe:
            tcpSocket:
              port: 8095
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8095
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8095
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: ha-config-root
              mountPath: /data/
      restartPolicy: Always
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: config-root
