apps/home/music-assistant/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: 'music-assistant'
spec:
  entryPoints:
    - 'websecure'
  routes:
    - match: 'Host(`mass.red.orleans.io`)'
      kind: 'Rule'
      services:
        - name: 'music-assistant'
          port: 8095
  tls:
    secretName: wildcard-orleans-io
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  labels:
    monitor: music-assistant
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 8095
